# sMexoscope

./: .gitignore  CMakeLists.txt  README.md  s(M)exoscope.jucer
Docs/: Manual.md
Source/: CMakeLists.txt  CustomKnob.cpp  CustomKnob.h  CustomSlider.cpp  CustomSlider.h  Defines.h  JuceMultiStateButton.cpp  JuceMultiStateButton.h  MultiStateButton.cpp  MultiStateButton.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SmartelectronixDisplay.cpp  SmartelectronixDisplay.h  Smexoscope.cpp  Smexoscope.h  TextElement.cpp  TextElement.h  WaveDisplay.cpp  WaveDisplay.h
